[project]
name = "ha-run-chicken"
version = "0.0.0"
description = "Home Assistant integration for the Run-Chicken automatic chicken door"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.0.0",
    "bleak-retry-connector>=4.4.4",
    "bluetooth-sensor-state-data>=1.9.0",
    "colorlog>=6.10.1",
    "crc8>=0.2.1",
    "homeassistant>=2025.2.4",
    "sensor-state-data>=2.20.0",
]

[dependency-groups]
dev = [
    "pip>=21.3.1",
    "pre-commit>=4.5.0",
    "ruff>=0.15",
]

# This is a Home Assistant / HACS integration, not a Python package: HACS ships
# custom_components/run_chicken directly and never installs a wheel. Tell uv not
# to build or install the project itself; it only manages the dev environment.
[tool.uv]
package = false
