[project]
name = "ha-run-chicken"
version = "0.0.0"
description = "Home Assistant integration for the Run-Chicken automatic chicken door"
readme = "README.md"
requires-python = ">=3.14.2"
# This project is not a published package: HACS ships custom_components/run_chicken
# directly and Home Assistant resolves the integration's runtime requirements from
# manifest.json. pyproject only describes the local development environment, so the
# integration's imports and the dev tooling live together in one list.
dependencies = [
    "bleak>=3.0.2",
    "bleak-retry-connector>=4.6.1",
    "bluetooth-sensor-state-data>=1.9.0",
    "colorlog>=6.10.1",
    "crc8>=0.2.1",
    # Not imported directly, but Home Assistant's bluetooth component pins this;
    # align the dev env so the bluetooth stack matches what HA actually runs.
    "habluetooth>=6.26.0",
    "homeassistant>=2026.6.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
    "sensor-state-data>=2.20.0",
    "ty>=0.0.54",
    "voluptuous>=0.15.2",
]

# Don't build or install the project itself; uv only manages the dev environment.
[tool.uv]
package = false
